Fix submit button not showing properly on login page

--- a/assets/css_lib/login.css
+++ b/assets/css_lib/login.css
@@ -34,11 +34,6 @@ h2 {
     font-size: 2vw;
 }
 
-input {
-    height: 2vw;
-    width: 15vw;
-}
-
 input[type="button"] {
     height: 3vw;
     font-size: 2vw;
